Correção de bugs para melhoria do Cumulative Layout Shift (CLS)

--- a/src/style.css
+++ b/src/style.css
@@ -51,7 +51,7 @@ button{
 
 button img, button span{
     vertical-align: middle;
-    width: 100% !important;
+    height: 25px !important;
     padding: 0 3px;
 }
 
